# CGRtools

./: README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-packages.yml
CGRtools/algorithms/calculate2d/: __init__.py
CGRtools/periodictable/: groupXIV.py  groupXV.py  groupXVI.py  groupXVII.py
doc/: conf.py
doc/tutorial/: 1_data_types_and_operations.ipynb  2_signatures.ipynb  3_standardization.ipynb  4_isomorphism.ipynb  5_transformation_rules.ipynb  6_reactor.ipynb  7_input_output.ipynb
